--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ sqlx = { git = "https://github.com/launchbadge/sqlx", rev = "20ba796b0d0b8547d2a
 # sqlx = { version = "0.8.1", default-features = false }
 thiserror = "1.0"
 tokio = { version = "1.38", default-features = false }
-tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres", default-features = false, rev = "02336bebb28507665184c21566e5d1dc8de1dd7d" }
+tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres", default-features = false, features = ["with-serde_json-1"], rev = "02336bebb28507665184c21566e5d1dc8de1dd7d" }
 tracing = { version = "0.1", default-features = false }
 tracing-actix-web = { version = "0.7", default-features = false }
 tracing-bunyan-formatter = { version = "0.3", default-features = false }
